Kleine spacing fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -79,6 +79,7 @@ footer {
     align-items: center;
     position: absolute;
     bottom: 10px;
+    left: 20px;
 }
 
 #title_website h2 {
